--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,49 @@
-body{
-    margin: 0;
-    height: 100%;
-    width: 100%;
+body {
+  margin: 0;
+  height: 100%;
+  width: 100%;
+}
+@font-face {
+  font-family: OpenDyslexic;
+  src: url(fonts/OpenDyslexic-Regular.otf);
+}
+* {
+  font-family: OpenDyslexic;
+}
+.main {
+  margin-left: 20%;
+  margin-right: 20%;
+  justify-content: center;
+  background-color: blanchedalmond;
+}
+h1,
+p,
+h2,
+div {
+  padding: 0;
+  margin: 0;
+}
+.header {
+  padding: 50px;
+  text-align: center;
+  background-color: beige;
+}
+.about {
+  text-align: center;
+}
+.two_pic {
+  justify-content: center;
+}
+.two_pic{
+  width: 100%;
+  height: 100%;
+  background-color: yellow;
+}
+.left_side {
+  float: left;
+  margin-left: 25%;
+}
+.right_side {
+  float: right;
+  margin-right: 25%;
 }
