animation_on_header

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,11 @@ div {
   padding: 50px;
   text-align: center;
   background-color: beige;
+  animation: fadeIn 5s;
+}
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
 .about {
   text-align: center;
