--- a/styles.css
+++ b/styles.css
@@ -40,15 +40,9 @@ div {
   justify-content: center;
 }
 .two_pic{
-  width: 100%;
-  height: 100%;
-  background-color: yellow;
+  display:flex;
+  background-color: hsl(60, 100%, 50%);
 }
 .left_side {
-  float: left;
-  margin-left: 25%;
-}
-.right_side {
-  float: right;
-  margin-right: 25%;
+  padding-right: 35%;
 }
