--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   height: 100%;
   width: 100%;
-  background-image: "images/header.jpg";
+  background-color: hsl(34, 75%, 80%);
 }
 @font-face {
   font-family: OpenDyslexic;
@@ -13,9 +13,11 @@ body {
   animation: fadeIn 2s;
 }
 .main {
+  padding: 1rem;
   margin-left: 10%;
   margin-right: 10%;
   justify-content: center;
+  text-align: center;
   background-color: blanchedalmond;
 }
 h1,
@@ -28,10 +30,10 @@ div {
 .header {
   padding: 3rem;
   text-align: center;
-  background-image: "images/header.jpg";
+  
 }
 @keyframes fadeIn {
-  0% { opacity: 0; }
+  0% { opacity: .10; }
   100% { opacity: 1; }
 }
 .about {
@@ -40,7 +42,7 @@ div {
 }
 .two_pic{
   display:flex;
-  background-color: hsl(60, 100%, 50%);
+  background-color: beige;
   justify-content: center;
   padding-top: 2rem;
   padding-bottom: 5rem;
@@ -55,8 +57,39 @@ div {
 .left_pic{
   height: 10rem;
   width: 20rem;
+  padding-left: 10%;
 }
 .right_pic{
   height: 10rem;
   width: 20rem;
+  padding-left: 10%;
+}
+.btn{
+  margin-top: 1rem;
+  height: 3rem;
+  width: 6rem;
+  font-size: 1rem;
+}
+.venmo{
+  background-color: beige;
+  justify-content: center;
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  height: 100%;
+
+}
+.vim_pic{
+  height: 15rem;
+  width: 15rem;
+  border-radius: 50%;
+}
+.dis{
+  margin-top: 3rem;
+  padding-bottom: 15rem;
+}
+.btn_home{
+  height: 4rem;
+  width: 6rem;
+  font-size: 1rem;
 }
